--- a/README.org
+++ b/README.org
@@ -30,9 +30,9 @@ contenido.
 + [[https://arxiv.org/abs/2109.04886][Proceedings 18th International Conference on Quantum Physics and Logic]]. #Logic #Math #Physics
 
 *** 12-Sep-21
-+ Hasse derivative of polynomials (in Lean).~ Johan Commelin. https://github.com/leanprover-community/mathlib/blob/56a59d3eaf3f1fad38fd3742831729bfd6d1a1dd/src/data/polynomial/hasse_deriv.lean #ITP #LeanProver #Math
-+ Taylor expansions of polynomials (in Lean). ~ Johan Commelin. https://github.com/leanprover-community/mathlib/blob/3e10324f686c8d895f97e4160a8ff796adaabdd4/src/data/polynomial/taylor.lean #ITP #LeanProver #Math
-+ A survey of practical formal methods for security. ~ Tomas Kulik et als. https://arxiv.org/abs/2109.01362 #FormalMethods
++ [[https://github.com/leanprover-community/mathlib/blob/56a59d3eaf3f1fad38fd3742831729bfd6d1a1dd/src/data/polynomial/hasse_deriv.lean][Hasse derivative of polynomials (in Lean)]].~ Johan Commelin. #ITP #LeanProver #Math
++ [[https://github.com/leanprover-community/mathlib/blob/3e10324f686c8d895f97e4160a8ff796adaabdd4/src/data/polynomial/taylor.lean][Taylor expansions of polynomials (in Lean)]]. ~ Johan Commelin. #ITP #LeanProver #Math
++ [[https://arxiv.org/abs/2109.01362][A survey of practical formal methods for security]]. ~ Tomas Kulik et als. #FormalMethods
 
 *** 11-Sep-21
 + [[https://link.springer.com/article/10.1007/s10817-021-09599-8][Distilling the requirements of Gödel’s incompleteness theorems with a proof assistant]]. ~ Andrei Popescu, Dmitriy Traytel. #ITP #IsabelleHOL #Logic #Math
