--- a/README.org
+++ b/README.org
@@ -25,6 +25,10 @@ contenido.
 
 ** Octubre de 2021
 
+*** 03-Oct-21
++ [[https://leanprover-community.github.io/mathlib_stats.html][Mathlib statistics]]. #ITP #LeanProver #Math
++ [[https://www.isa-afp.org/statistics.html][Isabelle's AFP statistics]]. #ITP #IsabelleHOL #Math
+
 *** 02-Oct-21
 + [[https://leanprover-community.github.io/blog/posts/month-in-mathlib-sep-2021/][This month in mathlib (Sep 2021)]]. ~ Mathlib community. #ITP #LeanProver #Math
 + [[https://linuxplumbersconf.org/event/11/contributions/1036/attachments/860/1666/Polat_2021_Testing-the-Red-Black-Tree-Implementation-of-the-Linux-Kernel-against-a-Formally-Verified-Variant.pdf][Testing the Red-Black tree implementation of the Linux kernel against a formally verified variant]]. ~ Mete Polat. #ITP #IsabelleHOL
